@@ -1,5 +1,5 @@
 {
-  "auth": "cpan:TBROWDER",
+  "auth": "zef:tbrowder",
   "authors": [
     "Tom Browder"
   ],
@@ -18,6 +18,7 @@
   ],
   "source-url": "https://github.com/tbrowder/DateTime-Posix.git",
   "tags": [
+    "Date Time Posix"
   ],
   "test-depends": [
   ],
