@@ -2,10 +2,14 @@ name = DateTime-Posix
 
 [ReadmeFromPod]
 ; enable = false
-filename = docs/README.pod
+filename = docs/README.rakudoc
+
+[UploadToZef]
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
